package com.ww.factory.abstractfactory;

/**
 * @Description TODO
 * @Author wanggw
 * @Date 2020/5/18 10:41
 */
public abstract class Apple implements Fruit {

    @Override
    public abstract void get();
}
