package com.ww.factory.abstractfactory;

/**
 * @Description TODO
 * @Author wanggw
 * @Date 2020/5/18 10:42
 */
public abstract class Banana implements Fruit {

    public abstract void get();
}
