package com.ww.factory.abstractfactory;

public interface Fruit {

    void get();
}
