package com.ww.factory.abstractfactory;

public interface FruitFactory {

    Fruit getApple();

    Fruit getBanana();
}
