package com.ww.factory.abstractfactory;

/**
 * @Description TODO
 * @Author wanggw
 * @Date 2020/5/18 10:47
 */
public class NorthBanana extends Banana {

    @Override
    public void get() {
        System.out.println("北方的香蕉，有点悬哟");
    }
}
