package com.ww.factory.abstractfactory;

/**
 * @Description TODO
 * @Author wanggw
 * @Date 2020/5/18 10:49
 */
public class SouthBanana extends Banana {

    @Override
    public void get() {
        System.out.println("南方香蕉，长势喜人");
    }
}
